New background for title

--- a/public/index.html
+++ b/public/index.html
@@ -69,15 +69,16 @@
 					<p>I'm a Web Developer from Dumfries, Scotland currently living in Auckland, New Zealand.</p>
 					<p>I graduated university with a BSc in Computing.</p>
 					<p>Websites that I design are <strong>responsive</strong> on all platforms and are designed with <strong>passion</strong> and great <strong>care</strong>. Every website I design is unique and given it's own individual feel.</p>
-					<p>The skills that I <strong>excel</strong> in are:</p>
+					<p><strong>Skills</strong> that I have experience in are:</p>
 					<ul class="myskills">
 						<li>HTML</li>
 						<li>CSS</li>
-						<li>PHP</li>
 						<li>Javascript</li>
 						<li>NodeJS</li>
+						<li>AngularJS</li>
+						<li>PHP</li>
 						<li>Jquery</li>
-						<li>SQL</li>
+						<li>MySQL</li>
 					</ul>
 					<p>One of the reasons I enjoy Web Development is that I am <strong>constantly learning</strong> and working on new techniques and ideas. Web Development gives you the oppurtunity to constantly <strong>improve yourself</strong> and that is a challenge that I relish.</p><br>
 					<p>One of my passions outside of Web Development is travel. I enjoy experiencing different cultures and seeing the beauty of the world. I feel that all I've seen and experienced is incorporated into my ideas and designs.</p>
