fixed bugs in title section

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 
 <head>
 
-	<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-	<meta content="utf-8" http-equiv="encoding">
+	<meta charset="utf-8" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 	<meta name="description" content="Web development portfolio of Graeme Brunton. A creative, passionate Web Developer from Dumfries, Scotland.">
 	<meta name="keywords" content="graeme,brunton,graeme brunton,graemebrunton,webdeveloper,web development,web, developer,development,javascript,php,nodejs,html,css">
@@ -47,10 +46,10 @@
 				</ul>
 				</div>
 		</nav>
-		<h1 class="title-desc-both">
-			<div class="title-desc" id="title-name">Graeme Brunton</div>
-			<div class="title-desc" id="title-wd">Web Developer</h1>
-		</h1>
+		<div class="title-desc-both">
+			<div class="title-desc"><h1 id="title-name">Graeme Brunton</h1></div>
+			<div class="title-desc"><h1 id="title-wd">Web Developer</h1></div>
+		</div>
 		<div class="rectangle top-rectangles rectangle1"></div>
 		<div class="rectangle rectangle-small top-rectangles rectangle2"></div>
 		<div class="rectangle top-rectangles rectangle3"></div>
