moved info button on portfolio section. added simplypuzzle.com. added animate.css. added animation on page load.

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="a/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="a/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="a/css/jquery-ui.min.css">
+	<link rel="stylesheet" type="text/css" href="a/css/animate.css">
 	<link href='https://fonts.googleapis.com/css?family=Raleway%7cMarcellus+SC%7cJosefin+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="a/css/main.css">
 	<link rel="stylesheet" type="text/css" href="a/css/smaller-phones-p.css" media="screen and (min-width : 200px) and (max-width : 374px) and (orientation : portrait)">
@@ -46,11 +47,11 @@
 				</ul>
 				</div>
 		</nav>
-		<div class="title-desc-both">
-			<div class="title-desc"><h1 id="title-name">Graeme Brunton</h1></div>
+		<div class="title-desc-both" style='visibility:hidden'>
+			<div class="title-desc"><h1 id="title-name" class=''>Graeme Brunton</h1></div>
 			<div class="title-desc"><h1 id="title-wd">Web Developer</h1></div>
 		</div>
-		<div class="rectangle top-rectangles rectangle1"></div>
+		<div class="rectangle top-rectangles rectangle1" style='visibility:hidden'></div>
 		<div class="rectangle rectangle-small top-rectangles rectangle2"></div>
 		<div class="rectangle top-rectangles rectangle3"></div>
 		<div class="rectangle rectangle-small top-rectangles rectangle4"></div>
