header now loads on window.load

--- a/public/index.html
+++ b/public/index.html
@@ -120,6 +120,7 @@
 		<script src="a/js/jquery.flip.min.js"></script>
 		<script src='a/js/flip.js'></script>
 		<script src="a/js/base.js"></script>
+		<script src="a/js/header_load.js"></script>
 	</footer>
 </body>
 </html>
