changes to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 						<li>Jquery</li>
 						<li>MySQL</li>
 					</ul>
-					<p>One of the reasons I enjoy Web Development is that I am <strong>constantly learning</strong> and working on new techniques and ideas. Web Development gives you the oppurtunity to constantly <strong>improve yourself</strong> and that is a challenge that I relish.</p><br>
+					<p>One of the reasons I enjoy Web Development is that I am <strong>constantly learning</strong> and working on new techniques and ideas. Web Development gives you the opportunity to constantly <strong>improve yourself</strong> and that is a challenge that I relish.</p><br>
 					<p>One of my passions outside of Web Development is travel. I enjoy experiencing different cultures and seeing the beauty of the world. I feel that all I've seen and experienced is incorporated into my ideas and designs.</p>
 				</div>
 			</div>
