changed design of website. Changed title picture from texture to an image. Changed header and menu design. Fixed bug concerned with menu and current class. Changed colour scheme of title description to black.

--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 <body>
 	<span id="logo"></span>
 	<div class="row title">
-		<nav class="navbar navbar-default navbar-fixed-top header">
+		<nav class="header navbar navbar-default navbar-fixed-top">
 				<div class="container">
 				<i class="logo" id="logolink"></i>
 				<i class="fa fa-bars fa-2x phone-menu"></i>
