--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
 
 	<script src="a/js/jquery-1.12.0.min.js"></script>
 	<script src="a/js/jquery-ui.min.js"></script>
-	<script src="a/js/bootstrap.min.js"></script>
-   	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
+	<script async src="a/js/bootstrap.min.js"></script>
+   	<script async src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="a/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="a/font-awesome/css/font-awesome.min.css">
