--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 	<meta name="description" content="Web development portfolio of Graeme Brunton. A creative, passionate Web Developer from Dumfries, Scotland.">
 	<meta name="keywords" content="graeme,brunton,graeme brunton,graemebrunton,webdeveloper,web development,web, developer,development,javascript,php,nodejs,html,css">
+	<script src="a/js/jquery-1.12.0.min.js"></script>
+	<script src="a/js/jquery-ui.min.js"></script>
 	<script async src="a/js/bootstrap.min.js"></script>
    	<script async src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js"></script>
 
@@ -82,7 +84,7 @@
 					<div class="github">
 						<span class="github-inner">
 							<span class="github-icon fa fa-github fa-2x"></span>
-							<a class="github-text" href="https://www.github.com/Brunton22">My Github Account</a>
+							<span class="github-text" href="https://www.github.com/Brunton22">My Github Account</span>
 						</span>
 					</div>
 				</div>
@@ -115,9 +117,6 @@
 		<link rel="stylesheet" type="text/css" href="a/css/ipad-p.css" media="screen and (min-width : 590px) and (max-width : 1324px) and (orientation : portrait)">
 		<link rel="stylesheet" type="text/css" href="a/css/ipad-l.css" media="screen and (min-width : 768px) and (max-width : 1324px) and (orientation : landscape)">
 
-	
-		<script src="a/js/jquery-1.12.0.min.js"></script>
-		<script src="a/js/jquery-ui.min.js"></script>
 		<script src="a/js/jquery.flip.min.js"></script>
 		<script src='a/js/flip.js'></script>
 		<script src="a/js/base.js"></script>
