Changed background image. Removed profile image. Removed rectangles in profile section. Changed color of title_desc to off-white. Removed animation slideIn on title_desc. Moved about section up 10px. Moved labels in contact section.

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
 <body>
 	<span id="logo"></span>
 	<div class="row title">
+	<div class="title-top">
+	</div>
 		<nav class="header navbar navbar-default navbar-fixed-top">
 				<div class="container">
 				<i class="logo" id="logolink"></i>
@@ -36,7 +38,7 @@
 				</ul>
 				</div>
 		</nav>
-		<div class="title-desc-both" style='visibility:hidden'>
+		<div class="title-desc-both">
 			<div class="title-desc"><h1 id="title-name" class=''>Graeme Brunton</h1></div>
 			<div class="title-desc"><h1 id="title-wd">Web Developer</h1></div>
 		</div>
@@ -44,9 +46,6 @@
 		<div class="rectangle rectangle-small top-rectangles rectangle2"></div>
 		<div class="rectangle top-rectangles rectangle3"></div>
 		<div class="rectangle rectangle-small top-rectangles rectangle4"></div>
-		<div class="profile-image">
-			<div class="img-circle profile"></div>
-		</div>
 		<div id="about"></div>
 	</div>
 	<div class="row body-row">
@@ -120,7 +119,7 @@
 		<script src="a/js/jquery.flip.min.js"></script>
 		<script src='a/js/flip.js'></script>
 		<script src="a/js/base.js"></script>
-		<script src="a/js/header_load.js"></script>
+		<!--<script src="a/js/header_load.js"></script>-->
 	</footer>
 </body>
 </html>
