Removed border top from about section. Moved bullet points in portfolio descriptions further right. Updated link for jounryinimages.com

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 	<meta name="description" content="Web development portfolio of Graeme Brunton. A creative, passionate Web Developer from Dumfries, Scotland.">
-	<meta name="keywords" content="graeme,brunton,graeme brunton,graemebrunton,webdeveloper,web development,web, developer,development,javascript,php,nodejs,html,css">
+	<!--<meta name="keywords" content="graeme,brunton,graeme brunton,graemebrunton,webdeveloper,web development,web, developer,development,javascript,php,nodejs,html,css">-->
 	<script src="a/js/jquery-1.12.0.min.js"></script>
 	<script src="a/js/jquery-ui.min.js"></script>
 	<script async src="a/js/bootstrap.min.js"></script>
@@ -15,8 +15,6 @@
 
 	<link rel="stylesheet" type="text/css" href="a/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="a/css/jquery-ui.min.css">
-
-	<!--<link id="favicon" rel="shortcut icon" href="a/imgs/logo.ico"/>-->
 
 	<title>Graeme Brunton | Web Developer</title>
 
