Added animation to title on page load. Fixed bug in portfolio current class

--- a/public/index.html
+++ b/public/index.html
@@ -66,7 +66,7 @@
 						<li>Jquery</li>
 						<li>MySQL</li>
 					</ul>
-					<p>One of the reasons I enjoy Web Development is that I am <strong>constantly learning</strong> and working on new techniques and ideas. Web Development gives you the opportunity to constantly <strong>improve yourself</strong> and that is a challenge that I relish.</p><br>
+					<p>One of the many reasons I enjoy Web Development is that I am <strong>constantly learning</strong> and working on new techniques and ideas. Web Development gives you the opportunity to constantly <strong>improve yourself</strong> and that is a challenge that I relish.</p><br>
 					<p>One of my passions outside of Web Development is travel. I enjoy experiencing different cultures and seeing the beauty of the world. I feel that all I've seen and experienced is incorporated into my ideas and designs.</p>
 				</div>
 			</div>
@@ -81,7 +81,7 @@
 					<div class="github">
 						<span class="github-inner">
 							<span class="github-icon fa fa-github fa-2x"></span>
-							<span class="github-text" href="https://www.github.com/Brunton22">My Github Account</span>
+							<a class="github-text" href="https://www.github.com/Brunton22">My Github Account</a>
 						</span>
 					</div>
 				</div>
@@ -117,7 +117,7 @@
 		<script src="a/js/jquery.flip.min.js"></script>
 		<script src='a/js/flip.js'></script>
 		<script src="a/js/base.js"></script>
-		<!--<script src="a/js/header_load.js"></script>-->
+		<script src="a/js/header_load.js"></script>
 	</footer>
 </body>
 </html>
