Portfolio descriptions now fade in when hovered over. Footer info has been centered. Media queries have been altered. Images have been changed in portfolio and dimensions

--- a/public/index.html
+++ b/public/index.html
@@ -52,9 +52,9 @@
 				<h2 class="about-header header-text sub-header">About</h2>
 				<div class="about-info">
 					<p>Hi there, I'm Graeme.</p>
-					<p>I'm a Web Developer from Dumfries, Scotland currently living in Auckland, New Zealand.</p>
+					<p>I'm a Web Developer from Dumfries, Scotland.</p>
 					<p>I graduated university with a BSc in Computing.</p>
-					<p>Websites that I design are <strong>responsive</strong> on all platforms and are designed with <strong>passion</strong> and great <strong>care</strong>. Every website I design is unique and given it's own individual feel.</p>
+					<p>Websites that I design are <strong>responsive</strong> on all platforms and are designed with <strong>passion</strong> and great <strong>care</strong>.</p>
 					<p><strong>Skills</strong> that I have experience in are:</p>
 					<ul class="myskills">
 						<li>HTML</li>
@@ -107,9 +107,9 @@
 		<link href='https://fonts.googleapis.com/css?family=Raleway%7cMarcellus+SC%7cJosefin+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="a/font-awesome/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="a/css/main.css">
-		<link rel="stylesheet" type="text/css" href="a/css/smaller-phones-p.css" media="screen and (min-width : 200px) and (max-width : 374px) and (orientation : portrait)">
+		<link rel="stylesheet" type="text/css" href="a/css/smaller-phones-p.css" media="screen and (min-width : 200px) and (max-width : 359px) and (orientation : portrait)">
 		<link rel="stylesheet" type="text/css" href="a/css/smaller-phones-l.css" media="screen and (min-width : 200px) and (max-width : 599px) and (orientation : landscape)">
-		<link rel="stylesheet" type="text/css" href="a/css/iphone-p.css" media="screen and (min-width : 375px) and (max-width : 590px) and (orientation : portrait)">
+		<link rel="stylesheet" type="text/css" href="a/css/iphone-p.css" media="screen and (min-width : 360px) and (max-width : 590px) and (orientation : portrait)">
 		<link rel="stylesheet" type="text/css" href="a/css/iphone-l.css" media="screen and (min-width : 600px) and (max-width : 767px) and (orientation : landscape)">
 		<link rel="stylesheet" type="text/css" href="a/css/ipad-p.css" media="screen and (min-width : 590px) and (max-width : 1324px) and (orientation : portrait)">
 		<link rel="stylesheet" type="text/css" href="a/css/ipad-l.css" media="screen and (min-width : 768px) and (max-width : 1324px) and (orientation : landscape)">
