--- a/public/index.html
+++ b/public/index.html
@@ -106,7 +106,7 @@
 		<link rel="stylesheet" type="text/css" href="a/css/animate.css">
 		<link href='https://fonts.googleapis.com/css?family=Raleway%7cMarcellus+SC%7cJosefin+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="a/font-awesome/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="a/css/main.css">
+		<link rel="stylesheet" type="text/css" href="a/css/main.min.css">
 		<link rel="stylesheet" type="text/css" href="a/css/smaller-phones-p.css" media="screen and (min-width : 200px) and (max-width : 359px) and (orientation : portrait)">
 		<link rel="stylesheet" type="text/css" href="a/css/smaller-phones-l.css" media="screen and (min-width : 200px) and (max-width : 599px) and (orientation : landscape)">
 		<link rel="stylesheet" type="text/css" href="a/css/iphone-p.css" media="screen and (min-width : 360px) and (max-width : 590px) and (orientation : portrait)">
