--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
 
 	<link rel="stylesheet" type="text/css" href="a/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="a/css/jquery-ui.min.css">
+	<link rel="stylesheet" type="text/css" href="a/css/hamburgers.css">
 
 	<title>Graeme Brunton | Web Developer</title>
 
@@ -28,7 +29,12 @@
 		<nav class="header navbar navbar-default navbar-fixed-top">
 				<div class="container">
 				<i class="logo" id="logolink"></i>
-				<i class="fa fa-bars fa-2x phone-menu"></i>
+				<!--<i class="fa fa-bars fa-2x phone-menu"></i>-->
+				<button class="hamburger hamburger--slider phone-menu" type="button">
+  					<span class="hamburger-box">
+    					<span class="hamburger-inner"></span>
+  					</span>
+				</button>
 				<ul class="menu-header">
 					<li id="contactlink" class="header-text menu-list">Contact</li>
 					<li id="portfoliolink" class="header-text menu-list">Portfolio</li>
